2004-08-18  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
	* gas/mips/branch-swap.s: New testcase.
	* gas/mips/branch-swap.d: New testcase.
	* gas/mips/mips.exp: Run the testcase.

2004-08-18  Nick Clifton  <nickc@redhat.com>

	* gas/macros/strings.s: Remove #NO_APP, accidentally committed as
	part of another patch.

2004-08-15  Nick Clifton  <nickc@redhat.com>

	* gas/all/altmacro.d: Allow for rest of frag being padded to an
	alignment boundary.

	* gas/arm/arm.exp: Run bignum test for ELF based targets only.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* gas/cfi/cfi-alpha-1.d: Adjust for readelf fix.
	* gas/cfi/cfi-alpha-3.d: Likewise.
	* gas/cfi/cfi-i386.d: Likewise.
	* gas/cfi/cfi-m68k.d: Likewise.
	* gas/cfi/cfi-ppc-1.d: Likewise.
	* gas/cfi/cfi-s390-1.d: Likewise.
	* gas/cfi/cfi-s390x-1.d: Likewise.
	* gas/cfi/cfi-sh-1.d: Likewise.
	* gas/cfi/cfi-sparc-1.d: Likewise.
	* gas/cfi/cfi-sparc64-1.d: Likewise.
	* gas/cfi/cfi-x86_64.d: Likewise.

2004-08-13 Jan Beulich <jbeulich@novell.com>

	* gas/all/altmacro.[sd]: New test.
	* gas/all/gas.exp: Run the new test.

2004-08-10  Mark Mitchell  <mark@codesourcery.com>

	* gas/arm/bignum1.s: New test.
	* gas/arm/arm.exp: Run it.

2004-08-06  Paul Brook  <paul@codesourcery.com>

	* gas/arm/pic.s,d: Test RELABS and SBREL relocations.

2004-08-05  Nitin Yewale  <nitiny@kpitcummins.com>

	* h8300/h8300.exp: Addition of new test case to check rx
	generation with adds and subs instruction for plain H8/300 target.
	* h8300/addsubrxcheck.s: New test source file.

2004-08-01  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/m68hc11.exp: Fix tests for 2.15
	* gas/elf/elf.exp: Test obj-elf for m6811-* and m6812-*
	* gas/symver/symver.exp: Likewise for symver tests.

2004-07-30  Michal Ludvig  <mludvig@suse.cz>

	* gas/i386/padlock.s, gas/i386/padlock.d: New tests for
	VIA PadLock instructions.

2004-07-29  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/basic.exp: Don't do sh2a test for sh5.