@@ -1,0 +1,7 @@
+.macro	m1 str
+	.ascii	&str
+.endm
+
+	.data
+
+m1	<!>!<!!>
