@@ -1,0 +1,1 @@
+.equ	a,!0
