@@ -114,7 +114,24 @@ case $target_triplet in {
     }
 }
 
-run_dump_test altmacro
+# '<' and '>' appear to have special meanings on the excluded targets
+case $target_triplet in {
+    { a29k-*-* } { }
+    { frv-*-* } { }
+    { hppa*-*-* } { }
+    { m32r-*-* } { }
+    { mmix-*-* } { }
+    { *c4x*-*-* } { }
+    { *c54x*-*-* } { }
+    default {
+	run_dump_test altmacro
+	# The second test is valid only when '!' is not a comment
+	# character (it is allowed to be a line comment character).
+	if { [lindex [gas_run excl.s "-o /dev/null" ""] 0] eq "" } {
+	    run_dump_test altmac2
+	}
+    }
+}
 
 # This test is for any COFF target.
 # We omit m88k COFF because it uses weird pseudo-op names.
